k8s/dev-portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-portal
  labels:
    name: dev-portal
